--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,3 +21,13 @@ body {
 .v-card-title {
  display: flex;
 }
+
+.v-input__control {
+    display: flex;
+    justify-content: center;
+    grid-area: control;
+    max-height: 42px;
+    font-family: -apple-system,blinkmacsystemfont,"Segoe UI",roboto,oxygen,ubuntu,cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    line-height: 1.5;
+    padding: 0 5px;
+}
