--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,7 +26,7 @@ body {
     display: flex;
     justify-content: center;
     grid-area: control;
-    max-height: 42px;
+    // max-height: 42px
     font-family: -apple-system,blinkmacsystemfont,"Segoe UI",roboto,oxygen,ubuntu,cantarell,"Open Sans","Helvetica Neue",sans-serif;
     line-height: 1.5;
     padding: 0 5px;
